# NewsBot

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt
assets/: api_request.py  embed_msg.py  imports.py  send_message.py
cogs/: Api.py  List.py  News.py  Ping.py  Ready.py  Sources.py
