[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
# Essential bot packages
python = "^3.8"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
newsapi-python = "^0.2.7"

# Packages minimal version to fix security vulnerabilities
aiohttp = "^3.10.2"
certifi = "^2024.07.04"
urllib3 = "^2.2.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.0.0"
